@@ -57,7 +57,7 @@ PRINT_XMLHELP("cracklib")
 
 /* ---- contruct module object ---- */
 DECLARE_BOOL_OPTS_2(is_enabled, debug);
-DECLARE_STRING_OPTS_11(type, retry, difok, difignore, minlen, dcredit, ucredit, lcredit, ocredit, minclass, dictpath);
+DECLARE_STRING_OPTS_11(authtok_type, retry, difok, difignore, minlen, dcredit, ucredit, lcredit, ocredit, minclass, dictpath);
 DECLARE_OPT_SETS;
 
 static module_helptext_t helptext[] = {{NULL, NULL, NULL}};
