@@ -56,8 +56,8 @@ PRINT_ARGS("pwhistory")
 PRINT_XMLHELP("pwhistory")
 
 /* ---- contruct module object ---- */
-     DECLARE_BOOL_OPTS_4(is_enabled, debug, use_authtok, enforce_for_root);
-DECLARE_STRING_OPTS_3(remember, retry, type);
+DECLARE_BOOL_OPTS_4(is_enabled, debug, use_authtok, enforce_for_root);
+DECLARE_STRING_OPTS_3(remember, retry, authtok_type);
 DECLARE_OPT_SETS;
 
 static module_helptext_t helptext[] = {{NULL, NULL, NULL}};
