@@ -1,12 +1,12 @@
 .\"     Title: pam-config
 .\"    Author: [see the "AUTHOR" section]
 .\" Generator: DocBook XSL Stylesheets v1.74.0 <http://docbook.sf.net/>
-.\"      Date: 12/01/2008
+.\"      Date: 12/18/2008
 .\"    Manual: Reference Manual
 .\"    Source: Reference Manual
 .\"  Language: English
 .\"
-.TH "PAM\-CONFIG" "8" "12/01/2008" "Reference Manual" "Reference Manual"
+.TH "PAM\-CONFIG" "8" "12/18/2008" "Reference Manual" "Reference Manual"
 .\" -----------------------------------------------------------------
 .\" * (re)Define some macros
 .\" -----------------------------------------------------------------
@@ -280,10 +280,10 @@ Add
 option to all pam_cracklib\&.so invocations\&.
 .RE
 .PP
-\fB\-\-cracklib\-type=\fR\fIvalue\fR
+\fB\-\-cracklib\-authtok_type=\fR\fIvalue\fR
 .RS 4
 Add
-\fBtype=\fR\fIvalue\fR
+\fBauthtok_type=\fR\fIvalue\fR
 option to pam_cracklib\&.so\&.
 .RE
 .PP
@@ -728,10 +728,10 @@ Add
 option to pam_pwhistory\&.so\&.
 .RE
 .PP
-\fB\-\-pwhistory\-type=\fR\fIvalue\fR
+\fB\-\-pwhistory\-authtok_type=\fR\fIvalue\fR
 .RS 4
 Add
-\fBtype=\fR\fIvalue\fR
+\fBauthtok_type=\fR\fIvalue\fR
 option to pam_pwhistory\&.so\&.
 .RE
 .PP
