@@ -1,3 +1,11 @@
+2008-12-18  Thorsten Kukuk  <kukuk@suse.de>
+
+	* src/mod_pam_pwhistory.c: Rename type option to authtok_type.
+	* src/mod_pam_cracklib.c: Likewise.
+
+	* src/pam-config.c (main): Make pam_cracklib default for new config
+	[FATE#300538].
+
 2008-12-01  Michael Calmer  <mc@suse.de>
 
 	* release version 0.68
